Updated dependencies