@@ -1,30 +1,30 @@
 plugins {
     id 'java' 
     id 'application'
-    id 'org.beryx.runtime' version '1.13.0'
+    id 'org.beryx.runtime' version '2.0.1'
 }
 
-group 'mediamatrix'
-version '2.9.10'
-
-application {
-    mainClass = 'mediamatrix.MediaMatrix'
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(25)
+    }
 }
 
 repositories {
     mavenCentral()
     maven { 
-        url 'https://netbeans.apidesign.org/maven2/'
+        url = 'https://netbeans.apidesign.org/maven2/'
     }
 }
 
 dependencies {
-    implementation 'org.jfree:jfreechart:1.5.4'
-    implementation 'com.formdev:flatlaf:3.2.5'
-    implementation 'org.apache.commons:commons-jexl3:3.0'
-    implementation 'org.netbeans.external:AbsoluteLayout:RELEASE150'
+    implementation 'org.jfree:jfreechart:1.5.6'
+    implementation 'com.formdev:flatlaf:3.6.2'
+    implementation 'org.apache.commons:commons-jexl3:3.6.0'
+    implementation 'org.netbeans.external:AbsoluteLayout:RELEASE280'
     implementation 'org.swinglabs.swingx:swingx-all:1.6.5-1'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2' 
+
+    testImplementation 'org.junit.jupiter:junit-jupiter:6.0.1'
 }
 
 tasks.named('test') {
@@ -32,13 +32,13 @@ tasks.named('test') {
 }
 
 wrapper {
-    gradleVersion = '8.5'
+    gradleVersion = '9.2.1'
 }
-
 
 application {
     mainClass = 'mediamatrix.MediaMatrix'
     applicationName = 'MediaMatrix'
+    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
 }
 
 tasks.withType(JavaCompile) {
@@ -55,7 +55,7 @@ jar {
 
 runtime {
     modules = ['java.base', 'java.desktop', 'java.logging', 'java.net.http', 'java.prefs']
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    options = ['--strip-debug', '--no-header-files', '--no-man-pages', '--enable-native-access=ALL-UNNAMED']
     jpackage {
         def currentOs = org.gradle.internal.os.OperatingSystem.current()
         def imgType = currentOs.windows ? 'ico' : currentOs.macOsX ? 'icns' : 'png'
